--- a/central/central.csproj
+++ b/central/central.csproj
@@ -1,21 +1,29 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>MeteoIpso.Central</RootNamespace>
   </PropertyGroup>
 
-    <ItemGroup>
-      <PackageReference Include="Grpc.AspNetCore" Version="2.56.0" />
-      <PackageReference Include="Grpc.Tools" Version="2.56.0" PrivateAssets="All" />
-      <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.10" />
-      <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.25.1" />
+    <PackageReference Include="Grpc.Net.ClientFactory" Version="2.59.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.59.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
+  </ItemGroup>
 
-    <ItemGroup>
-      <Protobuf Include="Protos\measurement.proto" GrpcServices="Both" />
-    </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\shared\shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="..\shared\Proto\measurement.proto" GrpcServices="Client" Link="Proto\measurement.proto" />
+  </ItemGroup>
 
 </Project>
