--- a/station/station.csproj
+++ b/station/station.csproj
@@ -5,17 +5,25 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>MeteoIpso.Station</RootNamespace>
   </PropertyGroup>
 
-    <ItemGroup>
-      <PackageReference Include="Grpc.Net.Client" Version="2.56.0" />
-      <PackageReference Include="Grpc.Tools" Version="2.56.0" PrivateAssets="All" />
-      <PackageReference Include="Serilog" Version="2.12.0" />
-      <PackageReference Include="Google.Protobuf" Version="3.25.3" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.25.1" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.59.0" />
+    <PackageReference Include="Grpc.Net.ClientFactory" Version="2.59.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.59.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
 
-    <ItemGroup>
-      <Protobuf Include="Protos\measurement.proto" GrpcServices="Client" />
-    </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\shared\shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="..\shared\Proto\measurement.proto" GrpcServices="Client" Link="Proto\measurement.proto" />
+  </ItemGroup>
 
 </Project>
